# net3

./: .gitignore  .mailmap  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
data/: README.md  sample_mask.tif
examples/: quickstart.py  tuning_walkthrough.py
src/net3/: C_net_functions.pyx  __init__.py  cli.py  contours.py  graph.py  image.py  pipeline.py  rediscretize.py  triangulate.py
src/net3/edit/: __init__.py  app.py  core.py
tests/: test_edit_core.py  test_pipeline.py
