[build-system]
requires = ["setuptools>=61", "wheel", "Cython>=3.0", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "net3"
version = "3.0.0"
description = "Binary mask → NetworkX graph: extract a vectorised topology + radius/length geometry from a segmentation."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    { name = "Adam Mayer" },
]
keywords = ["graph", "vectorisation", "segmentation", "skeleton", "vessel", "neuron"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy",
    "networkx>=2.6",
    "scipy",
    "opencv-python",
    "Pillow",
    "scikit-image",
    "shapely",
    "meshpy",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "matplotlib",
    "jupyter",
]

[project.scripts]
net3 = "net3.cli:main"

[project.urls]
"Source" = "https://github.com/ajmayer/net3"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
net3 = ["*.pyx"]
